--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,2 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-
-#files
-/src/Music
-/src/MusicData
-/src/Address
-/src/Images/location.png
-
-# dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/config.env
